Fixed broken styles

--- a/src/styles/base/_main.scss
+++ b/src/styles/base/_main.scss
@@ -41,7 +41,7 @@ section {
   flex-direction: column;
   min-height: 100vh;
   height: fit-content;
-  width: $default-section-width;
+  // width: $default-section-width;
   
   margin: auto;
   transition: transform $default-transition-duration ease-in-out, opacity $default-transition-duration ease-in-out;
