--- a/src/styles/views/_music.scss
+++ b/src/styles/views/_music.scss
@@ -4,6 +4,7 @@
 $mid-distance-break: 800px;
 
 .music-collection {
+  width: b.$default-section-width;
 
   h2 {
     font-family: BrianScratch;
